--- a/Coding.html
+++ b/Coding.html
@@ -4,19 +4,24 @@
     <title>Coding</title>
   </head>
   <body>
-    Coding is hard
-    <br>Coding is difficult</br>
+    <pr>Coding is hard
+    <br>Coding is complex</br>
     But still, I am giving my heart
     <br>And trying my best</br>
+    </pr>
     <br></br>
-    At first coding was devastating
+    <pr>
+    At first, coding was devastating
     <br>It literally shook my mind</br>
-    But, when I actually solved coding problems
+    But, when I actually sovled coding problems
     <br>Coding became quite worth my time</br>
+    </pr>
     <br></br>
+    <pr>
     It's been some time now
     <br>And I am proud of my little works</br>
     I didn't ask why, but I asked how
-    <br>Coding is difficult, but it has its perks
+    <br>Coding is difficult, but it has its perks</br>
+    </pr>
   </body>
 </htmL>
