--- a/Coding.html
+++ b/Coding.html
@@ -4,6 +4,7 @@
     <title>Coding</title>
   </head>
   <body>
+    <h1>Coding</h1>
     <pr>Coding is hard
     <br>Coding is complex</br>
     But still, I am giving my heart
