--- a/vmg.html
+++ b/vmg.html
@@ -26,7 +26,7 @@ A globally recognized Catholic university that nurtures faith, builds passion fo
 </br>
 <h><strong>Goal Audio </strong></h><br>
 <audio controls>
-  <source src="UIC Goal Recitation Audio.mp4" type="audio/mpeg">
+  <source src="UIC Goal Recitation Audio.m4a" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
 </br>
