--- a/calendarwithcss.html
+++ b/calendarwithcss.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="css/calendar.css">
+        <link rel="stylesheet" type="text/css" href="css/calendar.css">
         <title>CalendarCSS</title>
     </head>
     
