--- a/act42/act421.html
+++ b/act42/act421.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang=”en”>
   <head>
-    <link rel=”stylesheet” type="text/css" href="act42/act42.css"
+    <link rel=”stylesheet” type="text/css" href="act421/css/act421.css"
     type=”text/css”
     href=”act421.css” />
   </head>
