--- a/act43/act431.html
+++ b/act43/act431.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel=”stylesheet”
+    <link rel="stylesheet"
     type="text/css"
     href="css/act431.css" />
   </head>
