--- a/act45/testingcss.html
+++ b/act45/testingcss.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Testing Style Sheets</title>
         <meta name="description" contents="This page serves the purpose of testing style sheets on a variety of different elements">
-        <link rel="stylesheet" type="text/css" href="style.css"/>
+        <link rel="stylesheet" type="text/css" href="css/style.css"/>
     </head>
     <body>
         <header>
