--- a/act46/google.html
+++ b/act46/google.html
@@ -11,8 +11,8 @@
         <ul class="nav-panel">
             <li>Gmail</li>
             <li>Images</li>
-            <li class="navIcon"><img src="navIcon.png" alt="navIcon"></li>
-            <li class="profPic"><img src="profPic.JPG" alt="profPic"></li>
+            <li class="navIcon"><img src="css/navIcon.png" alt="navIcon"></li>
+            <li class="profPic"><img src="css/profPic.JPG" alt="profPic"></li>
         </ul>
         
         <div class="pageHeader">
