--- a/act47/tribute.html
+++ b/act47/tribute.html
@@ -5,11 +5,11 @@
         <meta charset="utf-8">
         <link rel="stylesheet"
               type="text/css"
-              href="css/style.css"/>
+              href="style.css"/>
     </head>
     <body>
         <h1>The Man, The Myth, Keanu Reeves</h1>
-        <img id="keanu" src="css/Keanu%20Reeves.jpg" alt="Keanu Reeves">
+        <img id="keanu" src="Keanu%20Reeves.jpg" alt="Keanu Reeves">
         <p id="mdisc">
             <mark>Who is Keanu Reeves?</mark> <br>
             Keanu Charles Reeves, whose first name means 
@@ -47,9 +47,10 @@
                 If you want to know more about Keanu Reeves, I will provide a link
                 that will direct you to a video on youtube that will present
                 some of the facts why Keanu is famous and loved by everyone around the globe. <br>
-                Link: <a href="https://www.youtube.com/watch?v=JpiS1ZdurLc">Keanu Reeves Broke the Internet</a>
+                <br>Link: <a href="https://www.youtube.com/watch?v=JpiS1ZdurLc">Keanu Reeves Broke the Internet</a><br>
                 <br> <mark2>DISCLAIMER:The video provided above is not mine, I do not own the
-                video nor I have any rights of it. It is merely entertainment and all credits should go to the owner!...
+                video nor I have any rights of it. I am merely sharing the greatness of Keanu
+                Reeves. All credits should go directly to the owner!...
                 </mark2>
             </p>
         </div>
