--- a/act47/tribute.html
+++ b/act47/tribute.html
@@ -5,11 +5,11 @@
         <meta charset="utf-8">
         <link rel="stylesheet"
               type="text/css"
-              href="style.css"/>
+              href="css/style.css"/>
     </head>
     <body>
         <h1>The Man, The Myth, Keanu Reeves</h1>
-        <img id="keanu" src="Keanu%20Reeves.jpg" alt="Keanu Reeves">
+        <img id="keanu" src="css/Keanu%20Reeves.jpg" alt="Keanu Reeves">
         <p id="mdisc">
             <mark>Who is Keanu Reeves?</mark> <br>
             Keanu Charles Reeves, whose first name means 
