--- a/exam/part2b/Narvasa_portfolio.html
+++ b/exam/part2b/Narvasa_portfolio.html
@@ -32,8 +32,8 @@
                 <p id="videodescription">This is a video of myself presenting an update on my work in progress, called CovidOust:
                 </p>
                 <video id="video" controls>
-                    <source src="https://drive.google.com/file/d/1DkYuU2Al1i6Dpgue1ps4NrrdzXUoIB_T/view?usp=sharing" type="video/mp4">
-                    <source src="https://drive.google.com/file/d/1DkYuU2Al1i6Dpgue1ps4NrrdzXUoIB_T/view?usp=sharing" type="video/ogg">
+                    <source src="https://youtu.be/RICw6lebZVw" type="video/mp4">
+                    <source src="https://youtu.be/RICw6lebZVw" type="video/ogg">
                     Your browser does not support the video tag.
                 </video>
             </div>
