--- a/exam/part2b/Narvasa_portfolio.html
+++ b/exam/part2b/Narvasa_portfolio.html
@@ -31,11 +31,7 @@
             <div class="presentation">
                 <p id="videodescription">This is a video of myself presenting an update on my work in progress, called CovidOust:
                 </p>
-                <video id="video" controls>
-                    <source src="https://youtu.be/RICw6lebZVw" type="video/mp4">
-                    <source src="https://youtu.be/RICw6lebZVw" type="video/ogg">
-                    Your browser does not support the video tag.
-                </video>
+                <iframe id="video" src="https://www.youtube.com/embed/RICw6lebZVw"></iframe>
             </div>
             
             <div class="portfolio">
