--- a/exam/part2b/Narvasa_portfolio.html
+++ b/exam/part2b/Narvasa_portfolio.html
@@ -31,7 +31,7 @@
             <div class="presentation">
                 <p id="videodescription">This is a video of myself presenting an update on my work in progress, called CovidOust:
                 </p>
-                <iframe id="video" src="https://www.youtube.com/embed/RICw6lebZVw"></iframe>
+                <iframe id="video" width="920px" height="470px" src="https://www.youtube.com/embed/RICw6lebZVw"></iframe>
             </div>
             
             <div class="portfolio">
